ongoing portfolio design things

--- a/src/patterns/01-molecules/02-blocks/00-portfolio-item.mustache
+++ b/src/patterns/01-molecules/02-blocks/00-portfolio-item.mustache
@@ -1,80 +1,111 @@
 <div class="portfolio-item_pi">
-  <h2 class="pi--project-name">SCORE.org</h2>
+  <h2 class="pi--project-name"><a href="">Score.org</a></h2>
+  <div class="pi--overview">
+    Engage and create <em>relationships</em> with <em>entrpreneurs</em>.
+  </div>
   <div class="pi--images">
-    <div class="pi--overview">
-      Engage and create <em>relationships</em> with <em>entrpreneurs</em>.
+    <picture class="pi--image">
+      <img
+          sizes="(max-width: 500px) 100vw, 500px"
+          srcset="
+{{img-portfolio-url}}score/score-home-wide-thumb_vdq1tr_ar_1_1,c_fill__c_scale,w_200.png 200w,
+{{img-portfolio-url}}score/score-home-wide-thumb_vdq1tr_ar_1_1,c_fill__c_scale,w_252.png 252w,
+{{img-portfolio-url}}score/score-home-wide-thumb_vdq1tr_ar_1_1,c_fill__c_scale,w_296.png 296w,
+{{img-portfolio-url}}score/score-home-wide-thumb_vdq1tr_ar_1_1,c_fill__c_scale,w_338.png 338w,
+{{img-portfolio-url}}score/score-home-wide-thumb_vdq1tr_ar_1_1,c_fill__c_scale,w_373.png 373w,
+{{img-portfolio-url}}score/score-home-wide-thumb_vdq1tr_ar_1_1,c_fill__c_scale,w_413.png 413w,
+{{img-portfolio-url}}score/score-home-wide-thumb_vdq1tr_ar_1_1,c_fill__c_scale,w_444.png 444w,
+{{img-portfolio-url}}score/score-home-wide-thumb_vdq1tr_ar_1_1,c_fill__c_scale,w_479.png 479w,
+{{img-portfolio-url}}score/score-home-wide-thumb_vdq1tr_ar_1_1,c_fill__c_scale,w_500.png 500w"
+          src="{{img-portfolio-url}}score/score-home-wide-thumb_vdq1tr_ar_1_1,c_fill__c_scale,w_500.png"
+          alt="">
+    </picture>
+    <picture class="pi--image">
+      <img
+          sizes="(max-width: 340px) 100vw, 340px"
+          srcset="
+{{img-portfolio-url}}score/score-home-narrow-thumb_ualj5w_ar_1_1,c_fill__c_scale,w_200.png 200w,
+{{img-portfolio-url}}score/score-home-narrow-thumb_ualj5w_ar_1_1,c_fill__c_scale,w_261.png 261w,
+{{img-portfolio-url}}score/score-home-narrow-thumb_ualj5w_ar_1_1,c_fill__c_scale,w_313.png 313w,
+{{img-portfolio-url}}score/score-home-narrow-thumb_ualj5w_ar_1_1,c_fill__c_scale,w_340.png 340w"
+          src="{{img-portfolio-url}}score/score-home-narrow-thumb_ualj5w_ar_1_1,c_fill__c_scale,w_340.png"
+          alt="">
+    </picture>
+    <div class="more-link">
+      <a href="">More</a>
     </div>
-    <picture class="pi--image">
-      <img
-          sizes="(max-width: 1366px) 100vw, 1366px"
-          srcset="
-{{img-portfolio-url}}castle/castle_ar_1_1,c_fill__c_scale,w_200.jpg 200w,
-{{img-portfolio-url}}castle/castle_ar_1_1,c_fill__c_scale,w_397.jpg 397w,
-{{img-portfolio-url}}castle/castle_ar_1_1,c_fill__c_scale,w_487.jpg 487w,
-{{img-portfolio-url}}castle/castle_ar_1_1,c_fill__c_scale,w_560.jpg 560w,
-{{img-portfolio-url}}castle/castle_ar_1_1,c_fill__c_scale,w_615.jpg 615w,
-{{img-portfolio-url}}castle/castle_ar_1_1,c_fill__c_scale,w_661.jpg 661w,
-{{img-portfolio-url}}castle/castle_ar_1_1,c_fill__c_scale,w_689.jpg 689w,
-{{img-portfolio-url}}castle/castle_ar_1_1,c_fill__c_scale,w_779.jpg 779w,
-{{img-portfolio-url}}castle/castle_ar_1_1,c_fill__c_scale,w_835.jpg 835w,
-{{img-portfolio-url}}castle/castle_ar_1_1,c_fill__c_scale,w_841.jpg 841w,
-{{img-portfolio-url}}castle/castle_ar_1_1,c_fill__c_scale,w_894.jpg 894w,
-{{img-portfolio-url}}castle/castle_ar_1_1,c_fill__c_scale,w_1016.jpg 1016w,
-{{img-portfolio-url}}castle/castle_ar_1_1,c_fill__c_scale,w_1030.jpg 1030w,
-{{img-portfolio-url}}castle/castle_ar_1_1,c_fill__c_scale,w_1047.jpg 1047w,
-{{img-portfolio-url}}castle/castle_ar_1_1,c_fill__c_scale,w_1366.jpg 1366w"
-          src="{{img-portfolio-url}}castle/castle_ar_1_1,c_fill__c_scale,w_1366.jpg"
-          alt="">
-    </picture>
-    <picture class="pi--image">
-      <img
-          sizes="(max-width: 2000px) 100vw, 2000px"
-          srcset="
-{{img-portfolio-url}}dog/dog_ar_1_1,c_fill__c_scale,w_200.jpg 200w,
-{{img-portfolio-url}}dog/dog_ar_1_1,c_fill__c_scale,w_419.jpg 419w,
-{{img-portfolio-url}}dog/dog_ar_1_1,c_fill__c_scale,w_577.jpg 577w,
-{{img-portfolio-url}}dog/dog_ar_1_1,c_fill__c_scale,w_713.jpg 713w,
-{{img-portfolio-url}}dog/dog_ar_1_1,c_fill__c_scale,w_834.jpg 834w,
-{{img-portfolio-url}}dog/dog_ar_1_1,c_fill__c_scale,w_936.jpg 936w,
-{{img-portfolio-url}}dog/dog_ar_1_1,c_fill__c_scale,w_1034.jpg 1034w,
-{{img-portfolio-url}}dog/dog_ar_1_1,c_fill__c_scale,w_1130.jpg 1130w,
-{{img-portfolio-url}}dog/dog_ar_1_1,c_fill__c_scale,w_1221.jpg 1221w,
-{{img-portfolio-url}}dog/dog_ar_1_1,c_fill__c_scale,w_1306.jpg 1306w,
-{{img-portfolio-url}}dog/dog_ar_1_1,c_fill__c_scale,w_1387.jpg 1387w,
-{{img-portfolio-url}}dog/dog_ar_1_1,c_fill__c_scale,w_1466.jpg 1466w,
-{{img-portfolio-url}}dog/dog_ar_1_1,c_fill__c_scale,w_1542.jpg 1542w,
-{{img-portfolio-url}}dog/dog_ar_1_1,c_fill__c_scale,w_1619.jpg 1619w,
-{{img-portfolio-url}}dog/dog_ar_1_1,c_fill__c_scale,w_1692.jpg 1692w,
-{{img-portfolio-url}}dog/dog_ar_1_1,c_fill__c_scale,w_1764.jpg 1764w,
-{{img-portfolio-url}}dog/dog_ar_1_1,c_fill__c_scale,w_1842.jpg 1842w,
-{{img-portfolio-url}}dog/dog_ar_1_1,c_fill__c_scale,w_1911.jpg 1911w,
-{{img-portfolio-url}}dog/dog_ar_1_1,c_fill__c_scale,w_1981.jpg 1981w,
-{{img-portfolio-url}}dog/dog_ar_1_1,c_fill__c_scale,w_2000.jpg 2000w"
-          src="{{img-portfolio-url}}dog/dog_ar_1_1,c_fill__c_scale,w_2000.jpg"
-          alt="">
-    </picture>
-    <picture class="pi--image">
-      <img
-          sizes="(max-width: 1600px) 100vw, 1600px"
-          srcset="
-{{img-portfolio-url}}woman_glasses/woman_glasses_ar_1_1,c_fill__c_scale,w_200.jpg 200w,
-{{img-portfolio-url}}woman_glasses/woman_glasses_ar_1_1,c_fill__c_scale,w_449.jpg 449w,
-{{img-portfolio-url}}woman_glasses/woman_glasses_ar_1_1,c_fill__c_scale,w_567.jpg 567w,
-{{img-portfolio-url}}woman_glasses/woman_glasses_ar_1_1,c_fill__c_scale,w_639.jpg 639w,
-{{img-portfolio-url}}woman_glasses/woman_glasses_ar_1_1,c_fill__c_scale,w_681.jpg 681w,
-{{img-portfolio-url}}woman_glasses/woman_glasses_ar_1_1,c_fill__c_scale,w_765.jpg 765w,
-{{img-portfolio-url}}woman_glasses/woman_glasses_ar_1_1,c_fill__c_scale,w_821.jpg 821w,
-{{img-portfolio-url}}woman_glasses/woman_glasses_ar_1_1,c_fill__c_scale,w_866.jpg 866w,
-{{img-portfolio-url}}woman_glasses/woman_glasses_ar_1_1,c_fill__c_scale,w_971.jpg 971w,
-{{img-portfolio-url}}woman_glasses/woman_glasses_ar_1_1,c_fill__c_scale,w_1011.jpg 1011w,
-{{img-portfolio-url}}woman_glasses/woman_glasses_ar_1_1,c_fill__c_scale,w_1065.jpg 1065w,
-{{img-portfolio-url}}woman_glasses/woman_glasses_ar_1_1,c_fill__c_scale,w_1103.jpg 1103w,
-{{img-portfolio-url}}woman_glasses/woman_glasses_ar_1_1,c_fill__c_scale,w_1191.jpg 1191w,
-{{img-portfolio-url}}woman_glasses/woman_glasses_ar_1_1,c_fill__c_scale,w_1330.jpg 1330w,
-{{img-portfolio-url}}woman_glasses/woman_glasses_ar_1_1,c_fill__c_scale,w_1600.jpg 1600w"
-          src="{{img-portfolio-url}}woman_glasses/woman_glasses_ar_1_1,c_fill__c_scale,w_1600.jpg"
-          alt="">
-    </picture>
+
+    <!--<picture class="pi--image">-->
+      <!--<img-->
+          <!--sizes="(max-width: 1366px) 100vw, 1366px"-->
+          <!--srcset="-->
+<!--{{img-portfolio-url}}castle/castle_ar_1_1,c_fill__c_scale,w_200.jpg 200w,-->
+<!--{{img-portfolio-url}}castle/castle_ar_1_1,c_fill__c_scale,w_397.jpg 397w,-->
+<!--{{img-portfolio-url}}castle/castle_ar_1_1,c_fill__c_scale,w_487.jpg 487w,-->
+<!--{{img-portfolio-url}}castle/castle_ar_1_1,c_fill__c_scale,w_560.jpg 560w,-->
+<!--{{img-portfolio-url}}castle/castle_ar_1_1,c_fill__c_scale,w_615.jpg 615w,-->
+<!--{{img-portfolio-url}}castle/castle_ar_1_1,c_fill__c_scale,w_661.jpg 661w,-->
+<!--{{img-portfolio-url}}castle/castle_ar_1_1,c_fill__c_scale,w_689.jpg 689w,-->
+<!--{{img-portfolio-url}}castle/castle_ar_1_1,c_fill__c_scale,w_779.jpg 779w,-->
+<!--{{img-portfolio-url}}castle/castle_ar_1_1,c_fill__c_scale,w_835.jpg 835w,-->
+<!--{{img-portfolio-url}}castle/castle_ar_1_1,c_fill__c_scale,w_841.jpg 841w,-->
+<!--{{img-portfolio-url}}castle/castle_ar_1_1,c_fill__c_scale,w_894.jpg 894w,-->
+<!--{{img-portfolio-url}}castle/castle_ar_1_1,c_fill__c_scale,w_1016.jpg 1016w,-->
+<!--{{img-portfolio-url}}castle/castle_ar_1_1,c_fill__c_scale,w_1030.jpg 1030w,-->
+<!--{{img-portfolio-url}}castle/castle_ar_1_1,c_fill__c_scale,w_1047.jpg 1047w,-->
+<!--{{img-portfolio-url}}castle/castle_ar_1_1,c_fill__c_scale,w_1366.jpg 1366w"-->
+          <!--src="{{img-portfolio-url}}castle/castle_ar_1_1,c_fill__c_scale,w_1366.jpg"-->
+          <!--alt="">-->
+    <!--</picture>-->
+    <!--<picture class="pi--image">-->
+      <!--<img-->
+          <!--sizes="(max-width: 2000px) 100vw, 2000px"-->
+          <!--srcset="-->
+<!--{{img-portfolio-url}}dog/dog_ar_1_1,c_fill__c_scale,w_200.jpg 200w,-->
+<!--{{img-portfolio-url}}dog/dog_ar_1_1,c_fill__c_scale,w_419.jpg 419w,-->
+<!--{{img-portfolio-url}}dog/dog_ar_1_1,c_fill__c_scale,w_577.jpg 577w,-->
+<!--{{img-portfolio-url}}dog/dog_ar_1_1,c_fill__c_scale,w_713.jpg 713w,-->
+<!--{{img-portfolio-url}}dog/dog_ar_1_1,c_fill__c_scale,w_834.jpg 834w,-->
+<!--{{img-portfolio-url}}dog/dog_ar_1_1,c_fill__c_scale,w_936.jpg 936w,-->
+<!--{{img-portfolio-url}}dog/dog_ar_1_1,c_fill__c_scale,w_1034.jpg 1034w,-->
+<!--{{img-portfolio-url}}dog/dog_ar_1_1,c_fill__c_scale,w_1130.jpg 1130w,-->
+<!--{{img-portfolio-url}}dog/dog_ar_1_1,c_fill__c_scale,w_1221.jpg 1221w,-->
+<!--{{img-portfolio-url}}dog/dog_ar_1_1,c_fill__c_scale,w_1306.jpg 1306w,-->
+<!--{{img-portfolio-url}}dog/dog_ar_1_1,c_fill__c_scale,w_1387.jpg 1387w,-->
+<!--{{img-portfolio-url}}dog/dog_ar_1_1,c_fill__c_scale,w_1466.jpg 1466w,-->
+<!--{{img-portfolio-url}}dog/dog_ar_1_1,c_fill__c_scale,w_1542.jpg 1542w,-->
+<!--{{img-portfolio-url}}dog/dog_ar_1_1,c_fill__c_scale,w_1619.jpg 1619w,-->
+<!--{{img-portfolio-url}}dog/dog_ar_1_1,c_fill__c_scale,w_1692.jpg 1692w,-->
+<!--{{img-portfolio-url}}dog/dog_ar_1_1,c_fill__c_scale,w_1764.jpg 1764w,-->
+<!--{{img-portfolio-url}}dog/dog_ar_1_1,c_fill__c_scale,w_1842.jpg 1842w,-->
+<!--{{img-portfolio-url}}dog/dog_ar_1_1,c_fill__c_scale,w_1911.jpg 1911w,-->
+<!--{{img-portfolio-url}}dog/dog_ar_1_1,c_fill__c_scale,w_1981.jpg 1981w,-->
+<!--{{img-portfolio-url}}dog/dog_ar_1_1,c_fill__c_scale,w_2000.jpg 2000w"-->
+          <!--src="{{img-portfolio-url}}dog/dog_ar_1_1,c_fill__c_scale,w_2000.jpg"-->
+          <!--alt="">-->
+    <!--</picture>-->
+    <!--<picture class="pi--image">-->
+      <!--<img-->
+          <!--sizes="(max-width: 1600px) 100vw, 1600px"-->
+          <!--srcset="-->
+<!--{{img-portfolio-url}}woman_glasses/woman_glasses_ar_1_1,c_fill__c_scale,w_200.jpg 200w,-->
+<!--{{img-portfolio-url}}woman_glasses/woman_glasses_ar_1_1,c_fill__c_scale,w_449.jpg 449w,-->
+<!--{{img-portfolio-url}}woman_glasses/woman_glasses_ar_1_1,c_fill__c_scale,w_567.jpg 567w,-->
+<!--{{img-portfolio-url}}woman_glasses/woman_glasses_ar_1_1,c_fill__c_scale,w_639.jpg 639w,-->
+<!--{{img-portfolio-url}}woman_glasses/woman_glasses_ar_1_1,c_fill__c_scale,w_681.jpg 681w,-->
+<!--{{img-portfolio-url}}woman_glasses/woman_glasses_ar_1_1,c_fill__c_scale,w_765.jpg 765w,-->
+<!--{{img-portfolio-url}}woman_glasses/woman_glasses_ar_1_1,c_fill__c_scale,w_821.jpg 821w,-->
+<!--{{img-portfolio-url}}woman_glasses/woman_glasses_ar_1_1,c_fill__c_scale,w_866.jpg 866w,-->
+<!--{{img-portfolio-url}}woman_glasses/woman_glasses_ar_1_1,c_fill__c_scale,w_971.jpg 971w,-->
+<!--{{img-portfolio-url}}woman_glasses/woman_glasses_ar_1_1,c_fill__c_scale,w_1011.jpg 1011w,-->
+<!--{{img-portfolio-url}}woman_glasses/woman_glasses_ar_1_1,c_fill__c_scale,w_1065.jpg 1065w,-->
+<!--{{img-portfolio-url}}woman_glasses/woman_glasses_ar_1_1,c_fill__c_scale,w_1103.jpg 1103w,-->
+<!--{{img-portfolio-url}}woman_glasses/woman_glasses_ar_1_1,c_fill__c_scale,w_1191.jpg 1191w,-->
+<!--{{img-portfolio-url}}woman_glasses/woman_glasses_ar_1_1,c_fill__c_scale,w_1330.jpg 1330w,-->
+<!--{{img-portfolio-url}}woman_glasses/woman_glasses_ar_1_1,c_fill__c_scale,w_1600.jpg 1600w"-->
+          <!--src="{{img-portfolio-url}}woman_glasses/woman_glasses_ar_1_1,c_fill__c_scale,w_1600.jpg"-->
+          <!--alt="">-->
+    <!--</picture>-->
   </div>
   <div class="pi--details">
     <div class="pi--item-description">
