--- a/src/scss/00-config/02-variables/_colors.scss
+++ b/src/scss/00-config/02-variables/_colors.scss
@@ -58,7 +58,7 @@ $color-error: color(red);
 $color-warning: color(orange);
 
 // Links
-$cs--link-a: color(gray);
+$cs--link-a: color(black);
 $cs--link-b: color(red);
 $cs-link-normal: $cs--link-a;
 $cs-link-hover: $cs--link-b;
