--- a/src/scss/00-config/02-variables/_colors.scss
+++ b/src/scss/00-config/02-variables/_colors.scss
@@ -44,8 +44,8 @@ $palettes: (
 );
 
 // Semantic Colors
-$color-background: color(white, warm);
-$color-text: color(black, light);
+$color-background: color(white);
+$color-text: color(black);
 //$color-link: color(red);
 $heading-color-default: $color-text;
 $color-border: color(gray, light);
