--- a/src/patterns/01-molecules/02-blocks/00-portfolio-item.mustache
+++ b/src/patterns/01-molecules/02-blocks/00-portfolio-item.mustache
@@ -36,6 +36,15 @@
     <picture class="pi--image">
       <img src="{{img-portfolio-url}}originals/score-home-devices.png" alt="Screenshots of Score.org">
     </picture>
+    <picture class="pi--image">
+      <img src="{{img-portfolio-url}}originals/score-home-laptop.png" alt="Screenshots of Score.org">
+    </picture>
+    <picture class="pi--image">
+      <img src="{{img-portfolio-url}}originals/score-home-phone.png" alt="Screenshots of Score.org">
+    </picture>
+    <picture class="pi--image">
+      <img src="{{img-portfolio-url}}originals/score-home-tablet.png" alt="Screenshots of Score.org">
+    </picture>
     <!--<picture class="pi--image">-->
       <!--<img-->
           <!--sizes="(max-width: 340px) 100vw, 340px"-->
