--- a/src/patterns/01-molecules/02-blocks/00-portfolio-item.mustache
+++ b/src/patterns/01-molecules/02-blocks/00-portfolio-item.mustache
@@ -7,6 +7,7 @@
     <input type="checkbox" class="pi--details--trigger hidden" id="pi--details--trigger--score">
     <label for="pi--details--trigger--score" class="pi--details--trigger-label">Details</label>
     <div class="pi--details--offside">
+      <label for="pi--details--trigger--score" class="pi--details--trigger-label--close">X</label>
       <div class="pi--item-description">
         <h3 class="pi--item-label--client">Client:</h3>
         <div class="pi--client">SCORE</div>
